--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body{
     padding: 0;
     margin: 0;
-    background-color: #000000;
+    background-color: #001022;
     font-family: Poppins, sans-serif;
     font-size: 1.2rem;
     color: #ffffff;
@@ -94,13 +94,32 @@ body{
     width: 7rem;
     height:7rem;
 }
+.body-2{
+    margin: 0;
+    padding: 0;
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+}
+
+.about-me{
+    background-color:rgba(241, 216, 216, 0.671);
+    color: rgb(255, 255, 255);
+    border-radius: 10px;
+    border: 1px solid black ;
+    box-shadow: 5px 5px 10px;
+}
+
+.footer{
+    height: 60rem;
+    background-color:rgba(175, 49, 49, 0.671);
+}
 
 
 /* Particle.js */
 
 #particles-js{
     width: 100vw;
-    height: 100vh;
+    height: 98vh;
     background-color: rgba(0, 80, 199, 0.116);
     background-image: url('');
     background-size: cover;
